--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="eng">
     <head>
+        <link rel="stylesheet" href="style.css">
         <title>Galactic Frogitude</title>
-
     </head>
     <body>
         <h1>Hello Everyone.</h1>
