--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     </head>
     <body>
         <h1>Hello Everyone.</h1>
-
-
-
+        <script src="script.js"></script>
+        
     </body>
 </html>
