--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="eng">
     <head>
-        <link rel="stylesheet" href="style.css">
-        <title>Galactic Frogitude</title>
+        <link rel="stylesheet" href="style.css" type="text/css">
+        <meta charset="utf-8" />
+        <title>Brinton Foy Reed</title>
     </head>
-    <body>
-        <h1>Hello Everyone.</h1>
+    <body id="index" class="home">
+        <h1>Welcome to my site.</h1>
         <script src="script.js"></script>
         
     </body>
