Add index2 to try a template

--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
         <meta charset="utf-8" />
         <title>Brinton Foy Reed</title>
     </head>
-    <body id="index" class="home">
+    <body>
         <h1>Welcome to my site.</h1>
-        <script src="script.js"></script>
+            <img id="myPic" src="./71026734_10216934870656364_4490201927862190080_o.jpg" alt="Headshot">
+        <div id=leftColumn>
+
+
+        </div>
+
+
+
+            <script src="script.js"></script>
         
     </body>
 </html>
