Add social and content structure

--- a/index.html
+++ b/index.html
@@ -4,12 +4,26 @@
         <link rel="stylesheet" href="style.css" type="text/css">
         <meta charset="utf-8" />
         <title>Brinton Foy Reed</title>
+        <link rel="stylesheet" href="<script src="https://kit.fontawesome.com/2b6bb5f566.js" crossorigin="anonymous"></script>">
     </head>
-    <body>
-        <h1>Welcome to my site.</h1>
-            <img id="myPic" src="./71026734_10216934870656364_4490201927862190080_o.jpg" alt="Headshot">
-        <div id=leftColumn>
 
+    <body>
+
+        <div class='center'>
+            <div class='avatar'>
+                <img id='myPic' src="./71026734_10216934870656364_4490201927862190080_o.jpg" alt="headshot">
+            </div>
+            <div class="content">
+                <h1>Brinton Foy Reed</h1>
+                <h2>Software Engineering Student</h2>
+                <p>lorem blah blah blah</p>
+                <h3>Contact Me</h3>
+            </div>
+            <div class="social">
+                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+            </div>
 
         </div>
 
