--- a/index.html
+++ b/index.html
@@ -3,53 +3,14 @@
     <head>
         <link rel="stylesheet" href="style.css" type="text/css">
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Brinton Foy Reed</title>
-        <style>
-            * {
-                margin: 0;
-                padding: 0;
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
-            }
-
-            body,
-            html {
-                color: white;
-                font-family: 'lato', 'san-serif';
-                display: flex;
-                justify-content: center;
-                min-height: 100vh;
-
-            }
-            body {
-                background-image: url("./background.jpg");
-                background-size: cover;
-                background-repeat: no-repeat;
-                background-position: bottom;
-            }
-
-            .center .avatar img {
-                border-radius: 50%;
-                width: 140px;
-                height:140px;
-                margin-top: 5%;
-                object-fit: cover;
-                object-position: 0 -8px;
-            }
-
-            .center {
-                width: 55%;
-                background-color: rgba(0, 0, 0, 0.7);
-                height: 60vh;
-                text-align: center;
-                border-radius: 5px;
-            }
-
-
-        </style>
     </head>
 
     <body>
-
         <div class='center'>
             <div class='avatar'>
                 <img src="./71026734_10216934870656364_4490201927862190080_o.jpg" alt="headshot">
@@ -57,13 +18,14 @@
             <div class="content">
                 <h1>Brinton Foy Reed</h1>
                 <h2>Software Engineering Student</h2>
-                <p>lorem blah blah blah</p>
+                <p>Welcome to my website! There isn't much to see here yet but more information and features will be added as I work through the Flatiron School curriculum. Thanks for visiting.</p>
                 <h3>Contact Me</h3>
             </div>
             <div class="social">
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.facebook.com/media/set/?set=a.1525272284108&type=3"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.instagram.com/nigels_vacation/"><i class="fab fa-instagram"></i>
+                <a href="https://www.linkedin.com/in/brintonreed/"><i class="fab fa-linkedin"></i></a>
+
             </div>
 
         </div>
