Add alert script

--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
             <div class='avatar'>
                 <img src="./71026734_10216934870656364_4490201927862190080_o.jpg" alt="headshot">
             </div>
+        <div id='input'>
             <div class="content">
                 <h1>Brinton Foy Reed</h1>
                 <h2>Software Engineering Student</h2>
                 <p>Welcome to my website! There isn't much to see here yet but more information and features will be added as I work through the Flatiron School curriculum. Thanks for visiting.</p>
                 <h3>Contact Me</h3>
             </div>
+        </div>
             <div class="social">
                 <a href="https://www.facebook.com/media/set/?set=a.1525272284108&type=3"><i class="fab fa-facebook"></i></a>
                 <a href="https://www.instagram.com/nigels_vacation/"><i class="fab fa-instagram"></i>
