Add JS click alerts

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 
     <body>
         <div class='center'>
+        <div id='avatar'> 
             <div class='avatar'>
                 <img src="./71026734_10216934870656364_4490201927862190080_o.jpg" alt="headshot">
             </div>
+        </div>
         <div id='input'>
             <div class="content">
                 <h1>Brinton Foy Reed</h1>
