add activities fetch

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       <div id="nav">
           <button id = "add-text">Add Text</button>
           <button id = "save">Save Meme</button>  <!-- adding text deletes existing?-->
-          <button id = "next-img">Next Image</button>
+          <button id = "nextAct">Next Image</button>
           <br>
-          <button id="top-5">Top 5</button>   
-          <button id="next">Search Images</button>
+          <button id= "top-5">Top 5</button>   
+          <button id= "search">Search Images</button>
       </div>
       
       <hr>
@@ -28,6 +28,8 @@
         
       <ul> 
           <h2>Bored? Mom can help.</h2>
+          <button id = "bored">Click Here For Ideas!</button>
+          <p>Activities go here!</p>
           <li>Num 1</li>
           <li>Other thing</li>
           <li>The thingaroo</li>
