fixed fetch authentication issue and image pull

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>Mom's Meme Maker</title>
     <link rel="stylesheet" type="text/css" href="index.css">
     <script defer src="src/index.js"></script>
-    <!-- <script defer src="src/index-sol.js"></script> -->
   </head>
   
   <body>
@@ -37,3 +36,5 @@
   </body>
 
 </html>
+
+  <!-- form, as it changes, have text boxes overlay https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_image_text -->
