changed APIs and debugged

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <hr>
       
       <div id="image-container"> 
-          <a href=""></a>
+        <img id="meme-pic" src="" alt="">
         </div>
         
       <ul> 
