added input fields

--- a/index.html
+++ b/index.html
@@ -11,14 +11,20 @@
     <h1>Your Mom's Magical Meme Maker</h1>
 
       <div id="nav">
-          <button id = "add-text">Add Text</button>
-          <button id = "save">Save Meme</button>  <!-- adding text deletes existing?-->
-          <button id = "nextAct">Next Image</button>
-          <br>
-          <button id= "textColor">Change Text Color</button>   
-          <button id= "search">Search Images</button>
+        <button id="save">Save Meme</button>  <!-- adding text deletes existing?-->
+        <button id="nextAct">Next Image</button>
+        <br>
+        <button id="textColor">Change Text Color</button>   
+        <button id="search">Search Images</button>
+        <br>
+        <button id="add-text">Add Text</button>
       </div>
-      
+      <div id="input">
+        <input type="text" id="top_text" placeholder="top text">
+        <br>
+        <input type="text" id="bottom_text" placeholder="bottom">
+      </div>
+
       <hr>
       
       <div class="image-container"> 
