adding text to photo in a way that is downloadable

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <button id="textColor">Change Text Color</button>   
         <button id="search">Search Images</button>
         <br>
-        <button id="add-text">Add Text</button>
+        <button id="add_text">Add Text</button>
       </div>
       <div id="input">
         <input type="text" id="top_text" placeholder="top text">
@@ -28,6 +28,7 @@
       <hr>
       
       <div class="image-container"> 
+        <a download=""></a>
         <img id="meme-pic" src="" alt="">
         <div id="memeText" class="white">Centered Textaroo</div>
         </div>
