Working on Canvas Text Bug

--- a/index.html
+++ b/index.html
@@ -22,13 +22,17 @@
             <input type="text" class="floatLeft" id="cat_input" value="animals" placeholder="Enter photo category here" maxlength="10"> <!--category-->
           </div>
           <div class="column"  id="right"> 
-            <button id="add_text">Add Text</button>                     <!--Add text-->                 
+            <!-- <button id="add_text">Add Text</button>                     Add text                  -->
             <br>                        
             <input type="text" id="top_text_input" placeholder="Top caption here" maxlength="24"> <!--top text-->
             <input type="text" id="bottom_text_input" placeholder="Bottom caption here" maxlength="24"> <!--bottom text-->
           </div>  
       </div>
       <hr>
+
+      <!-- container, format it to go on the side...panel(?) side panel -->
+      <canvas width="320" height="440"></canvas>
+
       <div class="image-container"> 
         <a download=""></a>
         <img id="meme-pic" src="" alt="random photo"> 
