Added text overlay to canvas

--- a/index.html
+++ b/index.html
@@ -22,16 +22,23 @@
             <input type="text" class="floatLeft" id="cat_input" value="animals" placeholder="Enter photo category here" maxlength="10"> <!--category-->
           </div>
           <div class="column"  id="right"> 
-            <!-- <button id="add_text">Add Text</button>                     Add text                  -->
+            <button id="add_text">Add Text</button>                               
             <br>                        
-            <input type="text" id="top_text_input" placeholder="Top caption here" maxlength="24"> <!--top text-->
+            <input type="text" id="top_text_input" placeholder="Top caption here" maxlength="24"> 
             <input type="text" id="bottom_text_input" placeholder="Bottom caption here" maxlength="24"> <!--bottom text-->
           </div>  
       </div>
       <hr>
 
-      <!-- container, format it to go on the side...panel(?) side panel -->
+
+
+      <div id="canvasContainer">    <!--  CANVAS TEXTBOXES-->
       <canvas width="320" height="440"></canvas>
+      <input type="text" id="canvasTopText" class="white" placeholder="Text here dummy!">
+      </div>
+
+
+
 
       <div class="image-container"> 
         <a download=""></a>
