--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <div class="header">
     <h1>Mom's Magical Meme Maker</h1>
       <p>Is your progeny a bump on a log who needs intervention? Communicate in a language</p>
-      <p>They understand. Create a motherly meme of your own making!</p>
+      <p>they understand. Send them a custom motherly meme!</p>
       <br>
     </div>
       <hr id="fullLine">
     
-      <p>Experts agree that listless children respond well to memes. Now is your chance to reach that</p>
+      <p>Experts agree that listless children respond well to memes. Now is your chance to reach the</p>
       <p>sluggish milk bandit or inert grump-a-lump in your life. After empowering your special wastrel with</p>
-      <p>a screen capture of your custom meme, use the activity generator to send them on their way!</p>
+      <p>a screen capture of your meme, use the activity generator to send them on their way!</p>
 
     <div class="row">
         <div class="column left">
