Tweak the row/columns in .css

--- a/index.html
+++ b/index.html
@@ -11,15 +11,11 @@
     
     <div class="header">
     <h1>Mom's Magical Meme Maker</h1>
-      <p>Is your progeny a bump on a log who needs intervention? Communicate in a language</p>
-      <p>they understand. Send them a custom motherly meme!</p>
-      <br>
+      <p>Is your progeny a bump on a log who needs intervention? Communicate in a language they understand. Send them a custom motherly meme!</p>
     </div>
       <hr id="fullLine">
     
-      <p>Experts agree that listless children respond well to memes. Now is your chance to reach the</p>
-      <p>sluggish milk bandit or inert grump-a-lump in your life. After empowering your special wastrel with</p>
-      <p>a screen capture of your meme, use the activity generator to send them on their way!</p>
+      <p>Experts agree that listless children respond well to memes. Now is your chance to reach the sluggish milk bandit or inert grump-a-lump in your life. After empowering your special wastrel with a screen capture of your meme, use the activity generator to send them on their way!</p>
 
     <div class="row">
         <div class="column left">
